# blocks.ls

./: Cargo.toml  README.md  package-lock.json
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: _section.scss  _table.scss  global.scss  i18n.ts
frontend/src/i18n/: en.json
frontend/src/lib/: AsmScript.svelte  Blocks.svelte  Time.svelte  Transaction.svelte  TransactionInputInfo.svelte  TransactionOutputInfo.svelte  Transactions.svelte  bitcoinScript.ts  dayjs.ts  i18n.ts  store.ts
frontend/src/lib/i18n/: en.json
frontend/src/routes/: __layout.svelte  index.svelte
frontend/src/routes/address/: [address].svelte
frontend/src/routes/block/: [id].svelte  index.svelte
frontend/src/routes/tx/: [id].svelte  index.svelte
indexer/: Cargo.toml  config-example.toml
indexer/src/: config.rs  database.rs  main.rs  rpc.rs
migrations/up/: V1__initial_schema.sql
web-api/: Cargo.toml  config-example.toml  config.toml
web-api/src/: config.rs  main.rs
web-api/src/database/: blocks.rs  mod.rs  transactions.rs
web-api/src/methods/: address.rs  block.rs  height.rs  mod.rs  transaction.rs
web-api/src/middleware/: logging.rs
