[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.18", features = ["macros"] }
toml = "0.5"
bitcoincore-rpc-async = "4.0.1-alpha.1"
deadpool-postgres = "0.10"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
refinery = { version = "0.8.4", features = ["tokio-postgres"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
futures = "0.3.21"

bitcoin = "0.28"