[package]
name = "web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
bitcoin = "0.28"
deadpool-postgres = "0.10"
rust_decimal = { version = "1.23", features = ["db-tokio-postgres"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.5"
tokio = { version = "1.18", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
uuid = { version = "1.0", features = ["v4"] }
